--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
   </head>
   <body>
     <!--Nav-->
+    <header>
+      <nav
+        class="navbar navbar-expand-md navbar-light sticky-top bg-light align-items-center"
+      >
+        <a class="navbar-brand mr-auto" href="index.html">
+          <img src="./assets/img/lyri.png" width="50" height="50" alt="Lyri"
+        /></a>
+      </nav>
+    </header>
+    <!--Hero Section-->
     <!--Search Input-->
     <!--Results Display-->
     <!--More Results -->
