--- a/index.html
+++ b/index.html
@@ -31,7 +31,26 @@
       </nav>
     </header>
     <!--Hero Section-->
-    <!--Search Input-->
+    <div class="jumbotron">
+        <h1 class="display-4">"Sing out loud"</h1>
+        <p class="lead">Simple. Fast. Accurate.</p>
+        <p>Finally a way to find the lyrics to that one song you heard last summer at your friends birthday party.</p>
+      </div>
+    <!--Search Section-->
+    <div class="container-fluid">
+        <div class="row">
+          <main role="main" class="col-md-12 ml-sm-auto col-lg-12 px-md-4 " id="lyrics">
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center text-center pt-3 pb-2 mb-3 border-bottom text-white">
+              <h1>Search millions of songs</h1>
+            </div>
+       
+            <div class="col-md-12 text-center">
+              <!--Input-->
+              <form id="form">
+              <input type="text" id="search" placeholder="Search by artist or song name..." />
+                  <button id="searchButton">Search</button>
+              </form>
+            </div>
     <!--Results Display-->
     <!--More Results -->
     <!--Footer-->
