Info Section style/text/svg

--- a/index.html
+++ b/index.html
@@ -26,21 +26,33 @@
         class="navbar navbar-expand-md navbar-light sticky-top bg-light align-items-center"
       >
         <a class="navbar-brand mr-auto" href="index.html">
-          <img src="./assets/img/lyri.png" width="50" height="50" alt="Lyri"
+          <img src="./assets/img/lyri.png" width="90" height="90" alt="Lyri"
         /></a>
       </nav>
     </header>
     <!--Hero Section-->
-    <div class="jumbotron">
-        <h1 class="display-4">"Sing out loud"</h1>
-        <p class="lead">Simple. Fast. Accurate.</p>
-        <p>Finally a way to find the lyrics to that one song you heard last summer at your friends birthday party.</p>
-      </div>
+    <div class="container-fluid jumbotron bg-light">
+
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="display-4 d-block">Sing out loud</h1>
+                <br>
+                <br>
+            <p class="lead">Simple. Fast. Accurate.
+                <br>
+                Lyri puts a stylish twist on finding the lyrics to that one song you heard last summer at your friends birthday party. 
+            </p>
+            </div>
+            <div class="col-md-6">
+            <img class="d-none d-md-block max-width" src="./assets/img/undraw_happy_music_g6wc.svg" width="400" height="400" alt="Happy Music Bird"/>
+            </div>
+        </div>
+    </div>
     <!--Search Section-->
     <div class="container-fluid">
         <div class="row">
           <main role="main" class="col-md-12 ml-sm-auto col-lg-12 px-md-4 " id="lyrics">
-            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center text-center pt-3 pb-2 mb-3 border-bottom text-white">
+            <div class="d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center text-center pt-3 pb-2 mb-3 border-bottom text-white">
               <h1>Search millions of songs</h1>
             </div>
        
