Navbar fix + search styles

--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
         <a class="navbar-brand mr-auto" href="index.html">
           <img src="./assets/img/lyri.png" width="90" height="90" alt="Lyri"
         /></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">
+                  About
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="lyrics.html">
+                  Donations
+                </a>
+              </li>
+            </ul>
+          </div>
       </nav>
     </header>
     <!--Hero Section-->
@@ -38,13 +55,13 @@
                 <h1 class="display-4 d-block">Sing out loud</h1>
                 <br>
                 <br>
-            <p class="lead">Simple. Fast. Accurate.
+            <p class="lead">Simple. Fast. Elegant.
                 <br>
                 Lyri puts a stylish twist on finding the lyrics to that one song you heard last summer at your friends birthday party. 
             </p>
             </div>
             <div class="col-md-6">
-            <img class="d-none d-md-block max-width" src="./assets/img/undraw_happy_music_g6wc.svg" width="400" height="400" alt="Happy Music Bird"/>
+            <img class=" hero-image d-none d-md-block max-width" src="./assets/img/undraw_happy_music_g6wc.svg" width="400" height="400" alt="Happy Music Bird"/>
             </div>
         </div>
     </div>
