--- a/index.html
+++ b/index.html
@@ -28,60 +28,88 @@
         <a class="navbar-brand mr-auto" href="index.html">
           <img src="./assets/img/lyri.png" width="90" height="90" alt="Lyri"
         /></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">
-                  About
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="lyrics.html">
-                  Donations
-                </a>
-              </li>
-            </ul>
-          </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarCollapse"
+          aria-controls="navbarCollapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html"> About </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="lyrics.html"> Donations </a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
     <!--Hero Section-->
     <div class="container-fluid jumbotron bg-light">
-
-        <div class="row">
-            <div class="col-md-6">
-                <h1 class="display-4 d-block">Sing out loud</h1>
-                <br>
-                <br>
-            <p class="lead">Simple. Fast. Elegant.
-                <br>
-                Lyri puts a stylish twist on finding the lyrics to that one song you heard last summer at your friends birthday party. 
-            </p>
-            </div>
-            <div class="col-md-6">
-            <img class=" hero-image d-none d-md-block max-width" src="./assets/img/undraw_happy_music_g6wc.svg" width="400" height="400" alt="Happy Music Bird"/>
-            </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h1 class="display-4 d-block">Sing out loud</h1>
+          <br />
+          <br />
+          <p class="lead">
+            Simple. Fast. Elegant.
+            <br />
+            Lyri puts a stylish twist on finding the lyrics to that one song you
+            heard last summer at your friends birthday party.
+          </p>
         </div>
+        <div class="col-md-6">
+          <img
+            class="hero-image d-none d-md-block max-width"
+            src="./assets/img/undraw_happy_music_g6wc.svg"
+            width="400"
+            height="400"
+            alt="Happy Music Bird"
+          />
+        </div>
+      </div>
     </div>
     <!--Search Section-->
     <div class="container-fluid">
-        <div class="row">
-          <main role="main" class="col-md-12 ml-sm-auto col-lg-12 px-md-4 " id="lyrics">
-            <div class="d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center text-center pt-3 pb-2 mb-3 border-bottom text-white">
-              <h1>Search millions of songs</h1>
-            </div>
-       
-            <div class="col-md-12 text-center">
-              <!--Input-->
-              <form id="form">
-              <input type="text" id="search" placeholder="Search by artist or song name..." />
-                  <button id="searchButton">Search</button>
-              </form>
-            </div>
-    <!--Results Display-->
-    <!--More Results -->
+      <div class="row">
+        <main
+          role="main"
+          class="col-md-12 ml-sm-auto col-lg-12 px-md-4"
+          id="lyrics"
+        >
+          <div
+            class="d-flex justify-content-center flex-wrap flex-md-nowrap align-items-center text-center pt-3 pb-2 mb-3 border-bottom text-white"
+          >
+            <h1>Search millions of songs</h1>
+          </div>
+
+          <div class="col-md-12 text-center">
+            <!--Input-->
+            <form id="form">
+              <input
+                type="text"
+                id="search"
+                placeholder="Search by artist or song name..."
+              />
+              <button id="searchButton">Search</button>
+            </form>
+          </div>
+          <!--Results Display-->
+          <div id="result" class="container text-white">
+            <p class="lead">Lyrics are displayed here.</p>
+          </div>
+          <!--More Results -->
+          <div id="more" class="container centered"></div>
+        </main>
+      </div>
+    </div>
     <!--Footer-->
     <!--Javascript-->
     <script
