add info section and styles

--- a/index.html
+++ b/index.html
@@ -110,7 +110,53 @@
         </main>
       </div>
     </div>
+
+    <!--Info Section-->
+    <div class="container-fluid jumbotron bg-light">
+      <div class="row">
+        <div class="col-md-6">
+          <img
+            class="hero-image d-none d-md-block max-width center"
+            src="./assets/img/undraw_mello_otq1.svg"
+            width="400"
+            height="400"
+            alt="Mello"
+          />
+        </div>
+        <div class="col-md-6 text-center">
+          <h1 class="d-block">Craving new tunes?</h1>
+          <br />
+          <br />
+          <p class="lead">
+            Check out Beatmango
+            <br />
+            Equal parts nostalgia and relaxation, Beatmango is a personally
+            curated media streaming platform built to make high attention tasks
+            more relaxing and flow friendly. It supplies audio, video, and
+            calming interactive content so sit back, relax and let the music
+            take control.
+          </p>
+          <button class="bmbtn"><a href="#" target="_blank"></a>Explore</button>
+          <br />
+          <br />
+        </div>
+        <br />
+        <br />
+        <div class="col-md-6">
+          <img
+            class="hero-image d-sm-none max-width center"
+            src="./assets/img/undraw_mello_otq1.svg"
+            width="400"
+            height="400"
+            alt="Mello"
+          />
+        </div>
+      </div>
+    </div>
     <!--Footer-->
+    <footer class="container text-dark text-center">
+      <a href="https://chrisadams.io">Designed by ChrisAdams.io</a>
+    </footer>
     <!--Javascript-->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
