--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html"> About </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="lyrics.html"> Donations </a>
+              <a class="nav-link" href="#"> Can't find a song? </a>
             </li>
           </ul>
         </div>
