--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
+    <link rel="shortcut icon" href="img/fav.png" />
     <meta name="description" content="Song Lyrics" />
     <meta name="author" content="Chris Adams" />
     <title>Lyri. Song Search</title>
