remove white space issue on mobile due to image

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <br />
         <div class="col-md-6">
           <img
-            class="hero-image d-sm-none max-width center"
+            class="d-sm-none img-fluid max-width center"
             src="./assets/img/undraw_mello_otq1.svg"
             width="400"
             height="400"
