Shorten placeholder text

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <input
                 type="text"
                 id="search"
-                placeholder="Search by artist or song name..."
+                placeholder="Search artist or song..."
               />
               <button id="searchButton">Search</button>
             </form>
