reroute footer link

--- a/index.html
+++ b/index.html
@@ -152,8 +152,10 @@
       </div>
     </div>
     <!--Footer-->
-    <footer class="container text-dark text-center">
-      <a href="https://chrisadams.io">Designed by ChrisAdams.io</a>
+    <footer class="container text-center">
+      <a class="text-dark" href="https://chrisadams.io" target="_blank"
+        >ChrisAdams.io</a
+      >
     </footer>
     <!--Javascript-->
     <script
