navigation icon update

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta name="description" content="Song Lyrics" />
     <meta name="author" content="Chris Adams" />
     <title>Lyri. Song Search</title>
+    <!--Icon-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!--Bootstrap-->
     <link
       rel="stylesheet"
@@ -24,7 +30,7 @@
     <!--Nav-->
     <header>
       <nav
-        class="navbar navbar-expand-md navbar-light sticky-top bg-light align-items-center"
+        class="navbar navbar-expand-md sticky-top bg-light align-items-center"
       >
         <a class="navbar-brand mr-auto" href="index.html">
           <img src="./assets/img/lyri.png" width="90" height="90" alt="Lyri"
@@ -38,7 +44,9 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"
+            ><i class="fa fa-ellipsis-v" style="font-size: 30px"></i
+          ></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ml-auto">
