--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           </p>
           <button class="bmbtn">
             <a
-              href="https://darkwebtourguide.github.io/Beatmango/"
+              href="https://beatmango.com"
               target="_blank"
             ></a
             >Explore
