--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
             calming interactive content so sit back, relax and let the music
             take control.
           </p>
-          <button class="bmbtn">
+          
             <a
               href="https://beatmango.com"
               target="_blank"
-            ></a
-            >Explore
-          </button>
+            ><button class="bmbtn">Explore
+          </button></a
+            >
           <br />
           <br />
         </div>
