--- a/index.html
+++ b/index.html
@@ -2,27 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-    />
-    <link rel="shortcut icon" href="img/fav.png" />
-    <meta name="description" content="Song Lyrics" />
-    <meta name="author" content="Chris Adams" />
-    <title>Lyri. Song Search</title>
-    <!--Icon-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
+
+    <meta name="description" content="Song Lyrics Made Simple" />
+    <meta name="author" content="ChrisAdams.io" />
+    <meta property="og:image" content="assets/img/bigimage.png" />
+    <title>Song Search Made Simple</title>
+    <link rel="icon" href="assets/img/fav.png" type="image/png" />
+    <link rel="apple-touch-icon" href="assets/img/appicon.png">
+    <!--FA-->
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <!--Bootstrap-->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"/>
     <!--Main Styles-->
     <link rel="stylesheet" type="text/css" href="assets/style.css" />
   </head>
